// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds \`dataTest\` prop 1`] = `
<ForwardRef
  dataTest="Duck"
>
  <Themed
    dataTest="Duck"
    innerRef={null}
    isDisabled={false}
    isLoading={false}
    size="large"
    theme="primary"
    type="button"
    width="auto"
  >
    <button
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      data-test="Duck"
      disabled={false}
      type="button"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </button>
  </Themed>
</ForwardRef>
`;

exports[`adds \`dataTest\` prop 2`] = `
<ForwardRef
  dataTest="Duck"
>
  <Plain
    dataTest="Duck"
    innerRef={null}
    isDisabled={false}
    theme="primary"
    type="button"
  >
    <button
      className="plain plainThemePrimary"
      data-test="Duck"
      disabled={false}
      type="button"
    >
      Goose
    </button>
  </Plain>
</ForwardRef>
`;

exports[`adds \`dataTestId\` prop 1`] = `
<ForwardRef
  dataTestId="Duck"
>
  <Themed
    dataTestId="Duck"
    innerRef={null}
    isDisabled={false}
    isLoading={false}
    size="large"
    theme="primary"
    type="button"
    width="auto"
  >
    <button
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      data-testid="Duck"
      disabled={false}
      type="button"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </button>
  </Themed>
</ForwardRef>
`;

exports[`adds \`dataTestId\` prop 2`] = `
<ForwardRef
  dataTestId="Duck"
>
  <Plain
    dataTestId="Duck"
    innerRef={null}
    isDisabled={false}
    theme="primary"
    type="button"
  >
    <button
      className="plain plainThemePrimary"
      data-testid="Duck"
      disabled={false}
      type="button"
    >
      Goose
    </button>
  </Plain>
</ForwardRef>
`;

exports[`renders button of type \`button\` by default 1`] = `
<ForwardRef>
  <Themed
    innerRef={null}
    isDisabled={false}
    isLoading={false}
    size="large"
    theme="primary"
    type="button"
    width="auto"
  >
    <button
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      type="button"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </button>
  </Themed>
</ForwardRef>
`;

exports[`renders button of type \`button\` by default 2`] = `
<ForwardRef>
  <Plain
    innerRef={null}
    isDisabled={false}
    theme="primary"
    type="button"
  >
    <button
      className="plain plainThemePrimary"
      disabled={false}
      type="button"
    >
      Goose
    </button>
  </Plain>
</ForwardRef>
`;

exports[`renders button of type \`submit\` when \`type\` is set 1`] = `
<ForwardRef
  type="submit"
>
  <Themed
    innerRef={null}
    isDisabled={false}
    isLoading={false}
    size="large"
    theme="primary"
    type="submit"
    width="auto"
  >
    <button
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      type="submit"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </button>
  </Themed>
</ForwardRef>
`;

exports[`renders button of type \`submit\` when \`type\` is set 2`] = `
<ForwardRef
  type="submit"
>
  <Plain
    innerRef={null}
    isDisabled={false}
    theme="primary"
    type="submit"
  >
    <button
      className="plain plainThemePrimary"
      disabled={false}
      type="submit"
    >
      Goose
    </button>
  </Plain>
</ForwardRef>
`;

exports[`renders children passed in 1`] = `
<ForwardRef>
  <Themed
    innerRef={null}
    isDisabled={false}
    isLoading={false}
    size="large"
    theme="primary"
    type="button"
    width="auto"
  >
    <button
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      type="button"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </button>
  </Themed>
</ForwardRef>
`;

exports[`renders children passed in 2`] = `
<ForwardRef>
  <Plain
    innerRef={null}
    isDisabled={false}
    theme="primary"
    type="button"
  >
    <button
      className="plain plainThemePrimary"
      disabled={false}
      type="button"
    >
      Goose
    </button>
  </Plain>
</ForwardRef>
`;

exports[`renders icon that is passed in 1`] = `
<ForwardRef
  icon={
    <svg>
      Duck
    </svg>
  }
>
  <Themed
    icon={
      <svg>
        Duck
      </svg>
    }
    innerRef={null}
    isDisabled={false}
    isLoading={false}
    size="large"
    theme="primary"
    type="button"
    width="auto"
  >
    <button
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      type="button"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        <span
          className="flexCenter"
        >
          <span
            className="iconContainer iconContainerHasRightChildren"
          >
            <svg>
              Duck
            </svg>
          </span>
          Goose
          <span
            className="iconContainer iconContainerHasLeftChildren"
          />
        </span>
      </span>
    </button>
  </Themed>
</ForwardRef>
`;
